<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_registration_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/user_registration_view_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_registration_view_text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_registration_view_hint_email"
        android:layout_margin="@dimen/margin_default">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_view_edit_text_email"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_registration_view_text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_registration_view_hint_password"
        app:endIconMode="password_toggle"
        android:layout_margin="@dimen/margin_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_view_edit_text_passowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_registration_view_text_input_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_registration_view_hint_password_repeat"
        app:endIconMode="password_toggle"
        android:layout_margin="@dimen/margin_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_view_edit_text_passowrd_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_registration_view_text_input_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_registration_view_hint_first_name"
        android:layout_margin="@dimen/margin_default">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_view_edit_text_first_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_registration_view_text_input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_registration_view_hint_last_name"
        android:layout_margin="@dimen/margin_default">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_view_edit_text_last_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_registration_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/user_registration_view_register"
        />
    </LinearLayout>

</ScrollView>
