<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/recognition_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_recognition_description"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        android:textSize="16sp"
        />

    <ImageView
        android:id="@+id/recognition_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mic_blue_48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recognition_description"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/dialog_recognition_image_content_description"
        />

    <TextView
        android:id="@+id/recognition_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_separator_option"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recognition_image"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="12sp"
        />

</RelativeLayout>