<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                android:contentDescription="@string/dialog_recognition_image_content_description" />


            <TextView
                android:id="@+id/login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_logo"

                android:textAlignment="center"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginBottom="24dp"
                android:textColor="@android:color/black" />


            <LinearLayout
                android:id="@+id/inputs_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_app_name">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/login_redirect_to_user_register"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_gravity="end|top"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorAccent"
                        android:src="@drawable/ic_add_white_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_text_input_email"
                        android:layout_gravity="bottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_fragment_email"
                        android:layout_margin="@dimen/margin_default">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_edit_text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_fragment_password"
                    app:endIconMode="password_toggle"
                    android:layout_margin="@dimen/margin_default">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_text_passowrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/login_fragment_enter" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/visitor_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visitor_enter"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_default"
                    android:padding="8dp" />
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</layout>
